# yahtzee_c

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  README.md  configure.ac  init.sh  main.c
src/: dice.h  main.c  roll.h  rules.h  turn.h
tests/: Makefile  test.c  test_roll.c
