AUTOMAKE_OPTIONS = subdir-objects
bin_PROGRAMS = yahtzee
yahtzee_SOURCES = src/main.c

clean-local: clean
	rm -rf .vscode
	rm -rf ./deps
	rm -rf autom4te.cache
	rm -rf src/.deps
	rm -rf src/.dirstamp
	rm aclocal.m4
	rm compile
	rm config.log
	rm config.status
	rm configure
	rm depcomp
	rm install-sh
	rm Makefile
	rm missing
